# photoprism

./: # Convert the script to use Windows line.txt  # PhotoPrism Dockerfile with Node.dockerfile  .blackboxrules  .dockerignore  .env.docker  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_DOCUMENTATION.md  DOCKER-SETUP.md  Dockerfile  INSTALL.md  Makefile  Makefile.ninja  ORGANIZATION-GUIDE.md  PowerShell-Deploy.ps1  QUICK-START.md  README.md  Reset-Agent.ps1  Run-Deployment.ps1  Setup-Environment.ps1  USAGE-GUIDE.md  build.ninja  build.ps1  compose.yaml  deploy-ninja.sh  deploy-production.sh  deploy.ps1  deploy.sh  docker-compose-commands.md  docker-compose.yml  docker-entrypoint.sh  fix-line-endings.sh  go.mod  go.sum  index.js  init.sql  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: brains-integration.yml  docker-verify.yml  ninja-team.yml
.history/: README_20250305122548.md
.history/analysis_service/: README_20250305215425.md
.history/docker/: README_20250305153105.md  README_20250305153111.md
.history/ingestion_service/: README_20250305153136.md  README_20250305215418.md
.history/scripts/: build_20250306060832.sh  download-facenet_20250306061016.sh  download-nasnet_20250306061219.sh  download-nasnet_20250306204225.sh
backend/cmd/photoprism2/: routes.go
backend/internal/api/: category.go
backend/internal/entity/: category.go
backend/internal/service/: category.go
backend/internal/setup/: categories.go
backend/migrations/: 20230501_01_create_categories.sql
benchmarks/: benchmark_example.cpp  benchmark_framework.h  photo_organizer.cpp
cmake/: BuildConfig.h.in
cmd/photoprism/: photoprism.go
cmd/photoprism/commands/: brains.go  commands.go
config/: app-config.json  app-config.template.json  benchmarks-config.js  default-categories.yml  dependencies.json  ninja-team.yml
config/ninja/: team-config.yml
docker/: .env.example  .env.prod  README.md  build.ninja.yaml  docker-compose.k8s.yml  docker-compose.ninja.yml  docker-compose.prod.yml  docker-compose.yml  docker-stack.yml  stack.yml
docker/backup/: run-backup.sh
docker/compose/: production.yml
docker/config/: Dockerfile.dev  Dockerfile.prod  settings.json
docker/config/mariadb/: photoprism.cnf
docker/ddns/: Dockerfile
docker/develop/armv7/: Dockerfile
docker/develop/noble/: Dockerfile
docker/develop/noble-slim/: Dockerfile
docker/dummy/oidc/app/: go.mod  go.sum
docker/nginx/conf.d/: photoprism.conf
docker/photoprism/: Dockerfile  Dockerfile.prod
docker/photoprism/armv7/: Dockerfile
docker/scripts/: backup.sh  deploy.sh  healthcheck.sh  ninja-monitor.sh
docker/secrets/: mariadb_root_password.txt  photoprism_admin_password.txt  photoprism_db_password.txt
docker/supervisor/: photoprism.conf  supervisord.conf
docker/traefik/: traefik.yml
docs/: best-practices.md  cron-examples.md  production-deployment.md
frontend/: package-lock.json  package.json
frontend/src/common/: api.js  form.js  util.js
frontend/src/component/: dialogs.vue  lightbox.vue
frontend/src/component/brains/: brains-panel.vue
frontend/src/component/service/: edit.vue  upload.vue
frontend/src/model/: file.js  photo.js  session.js  thumb.js  user.js
frontend/src/page/: photos.vue  places.vue
frontend/src/page/people/: new.vue
frontend/src/page/settings/: account.vue
frontend/tests/acceptance/page-model/: context-menu.js  menu.js  toolbar.js
helm/photoprism2/: Chart.yaml  values.yaml
helm/photoprism2/templates/: deployment.yaml  secret.yaml
internal/api/: brains.go
internal/brains/: brains.go  brains_test.go  cache.go  curator.go  integration_test.go  processor.go  scheduler.go  tensorflow.go
internal/commands/: commands.go
internal/config/: config.go
internal/entity/: brains_result.go
internal/photoprism/: convert.go  convert_test.go  indexer.go
internal/search/: brains.go
kubernetes/: photoprism.yaml
performance/: database-operations-2025-03-19T09-04-51-385Z.json  database-operations-2025-03-19T17-23-20-231Z.json  image-processing-2025-03-19T09-04-51-239Z.json  image-processing-2025-03-19T17-23-20-035Z.json  network-operations-2025-03-19T09-04-52-770Z.json  network-operations-2025-03-19T17-23-23-965Z.json  overall-results-2025-03-19T09-04-52-774Z.json  overall-results-2025-03-19T17-23-24-020Z.json  system-resources-2025-03-19T09-04-49-943Z.json  system-resources-2025-03-19T17-23-19-860Z.json
pkg/face/: requirements.txt
podman/: .env.example  podman-compose.prod.yml
scripts/: Initialize-PhotoprismDirectory.ps1  automate-build.sh  backup-production.sh  benchmark-runner.js  brains-workflow.sh  build-dev.ps1  build-docker.sh  build-ninja.sh  build-with-retry.sh  build.sh  check-dependencies.sh  cleanup_brains_backups.py  cli.js  deploy-ninja.sh  deploy-production.sh  deploy.js  diagnose-deployment.sh  docker-benchmark-build.sh  docker-build-all.sh  docker-build-multi-arch.sh  docker-build.ps1  docker-build.sh  docker-ci.sh  docker-commands.md  docker-deploy-helper.sh  docker-image-optimize.sh  docker-improvements-plan.md  docker-login-helper.sh  docker-network-check.sh  docker-run.ps1  docker-secrets.sh  docker-troubleshoot.js  download-brains.sh  download-nsfw.sh  entrypoint.sh  fix-docker-setup.sh  forensic_case_builder.py  init-database.sh  init-directory-structure.sh  init-secrets.ps1  (+22 more)
scripts/ci/: test-brains.sh
scripts/ninja/: Ninja-TeamStatusMonitor.ps1  README.md  controller.sh  custom.mk  deploy-config.json  deploy-ninja.sh  deploy.sh.example  ninja-team.yml.example  rollback.sh  status_report.sh
scripts/ninja/cmake/: ninja-team-deploy.sh
scripts/ninja/cmake/modules/: NinjaTeam.cmake
scripts/ninja/cmake/templates/: team-config.json.in
scripts/ninja/cmake/tools/: benchmark_task.sh  execute_recursive_task.sh  execute_task.sh  monitor_task.ps1  (+1 more)
scripts/utils/: container-manager.js  docker-wrapper.js  logger.js  performance.js  run-docker-command.js
secrets/: README.md
tests/: test_cleanup_brains_backups.py  test_forensic_case_builder.py
web_app/: README.md
(+4 files in other folders)
